hphp/hack/test/typecheck/inheritance/inherited_redeclared_as_static.php.shallow_decl.exp
File "inherited_redeclared_as_static.php", line 11, characters 7-9:
This class overrides some members with a different staticness (Typing[4091])
  File "inherited_redeclared_as_static.php", line 4, characters 20-39:
  The property `$non_static_property` is declared as non-static here
  File "inherited_redeclared_as_static.php", line 12, characters 24-43:
  But it conflicts with an inherited static declaration here
File "inherited_redeclared_as_static.php", line 11, characters 7-9:
This class overrides some members with a different staticness (Typing[4091])
  File "inherited_redeclared_as_static.php", line 7, characters 22-36:
  The method `nonStaticMethod` is declared as non-static here
  File "inherited_redeclared_as_static.php", line 15, characters 29-43:
  But it conflicts with an inherited static declaration here
File "inherited_redeclared_as_static.php", line 11, characters 7-9:
This class overrides some members with a different staticness (Typing[4091])
  File "inherited_redeclared_as_static.php", line 13, characters 17-32:
  The property `static_property` is declared as non-static here
  File "inherited_redeclared_as_static.php", line 5, characters 27-42:
  But it conflicts with an inherited static declaration here
File "inherited_redeclared_as_static.php", line 11, characters 7-9:
This class overrides some members with a different staticness (Typing[4091])
  File "inherited_redeclared_as_static.php", line 16, characters 22-33:
  The method `staticMethod` is declared as non-static here
  File "inherited_redeclared_as_static.php", line 8, characters 29-40:
  But it conflicts with an inherited static declaration here
